# locosim_ws

./: .gitignore  .gitmodules  README.md  bags_info.md  build.sh  imu.xml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
src/sim_to_real/: package.xml  setup.cfg  setup.py
src/sim_to_real/launch/: nn_rl_experiments.launch.py  rl_experiments.launch.py
src/sim_to_real/sim_to_real/: nn_trajectory_generator.py  nn_trajectory_generator_test_utils.py  test_nn_utils.py  traj_gen_nn.py  traj_generator.py  trajectory_generator.py
src/sim_to_real/sim_to_real/utils/: rlg_utils.py  torch_utils.py
